# material-agent

./: .dockerignore  .gitignore  .gitmessage.txt  AGENTS.md  Dockerfile.cpu  Dockerfile.intel-openvino  Makefile  README.md  config.yaml  pyproject.toml
.agents/: README.md  codex.md  harness-engineering.md
.github/workflows/: publish-intel-openvino.yml
deploy/unraid/: material-agent.xml
docker/: config.intel-openvino.yaml  entrypoint.sh
docs/: README.md  harness-runbook.md  module-map.md  omlx-benchmark-matrix.md  omlx-model-profiles.md  roadmap.md
docs/ai/: README.md  harness-workflow.md  icon-design.md  inference-runtime.md  model-selection.md  project-overview.md  reference-repos.md  shared-context.md
docs/ai/architecture/: module-boundaries.md
docs/operations/: 2026-05-18-xmp-compatibility-todo.md  2026-05-21-model-selection-todo.md  2026-07-01-local-model-candidate-benchmark.md  2026-07-01-local-runtime-migration-plan.md  2026-07-02-xmp-sidecar-compatibility.md  2026-07-11-refine-plan-completion-audit.md  2026-07-13-whole-project-review-fixes.md  aesthetic-label-store.md  aesthetic-target-calibration.md  model-management.md  session-handoff.md
scripts/: write_macos_launcher.py
src/material_agent/: main.py
tests/: test_aesthetic_calibration.py  test_aesthetic_label_store.py  test_aggregator.py  test_app_services.py  test_architecture_refine.py  test_async_tools.py  test_config_validator.py  test_container_contract.py  test_dimension_redesign.py  test_dinov2_embedding.py  test_grouper.py  test_icon_assets.py  test_launcher.py  test_local_benchmark.py  test_local_runtime_preflight.py  test_main.py  test_mediapipe_face.py  test_model_catalog_service.py  test_musiq_screening.py  test_nima_device_benchmark.py  test_ollama_client.py  test_omlx_benchmark.py  test_omlx_harness.py  test_omlx_instance.py  test_omlx_instance_service.py  test_omlx_live.py  test_omlx_model_profiles.py  test_omlx_probe.py  test_openclip_semantic.py  test_openvino_embedding.py  test_openvino_model_service.py  test_openvino_nima_aesthetic.py  test_openvino_ssd_detection.py  test_pipeline.py  test_preview_decode.py  test_progress.py  test_prompting_registry.py  test_pyiqa_quality.py  test_rescore.py  test_review_job.py  (+12 more)
(+213 files in other folders)
