[project]
name = "material-agent"
version = "0.4.0"
description = "NAS-first local photo culling and scoring agent"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "rawpy>=0.25,<1.0",
    "numpy>=2.2,<3.0",
    "opencv-python>=4.12,<5.0",
    "imagehash",
    "pyyaml>=6.0,<7.0",
    "rich>=13.7,<14.0",
    "requests>=2.32,<3.0",
    "Pillow>=11,<12",
    "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
cpu = [
    "onnxruntime>=1.27,<2.0",
]
intel-openvino = [
    "openvino>=2026.2,<2027",
]

[project.scripts]
material-agent = "material_agent.shells.cli.main:main"

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pytest-mock",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/material_agent"]

[tool.ruff]
line-length = 100
target-version = "py314"
