[project]
name = "material-agent"
version = "0.4.0"
description = "NAS-first local photo culling and scoring agent"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "rawpy>=0.25,<1.0",
    "numpy>=2.2,<3.0",
    "opencv-python>=4.12,<5.0",
    "imagehash",
    "pyyaml>=6.0,<7.0",
    "rich>=13.7,<14.0",
    "requests>=2.32,<3.0",
    "Pillow>=11,<12",
    "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
cpu = [
    "onnxruntime>=1.27,<2.0",
]
intel-openvino = [
    "onnx>=1.20,<2.0",
    "openvino>=2026.2,<2027",
]
local-models = [
    "open-clip-torch>=3.2,<4.0",
    "torch>=2.8,<3.0",
    "transformers>=5.0,<6.0",
]
quality-models = [
    "pyiqa>=0.1.15,<0.2",
    # PyIQA's CLIPIQA path still imports pkg_resources through openai-clip.
    "setuptools>=70,<81",
    "torch>=2.8,<3.0",
]
face-models = [
    "mediapipe>=0.10.31,<0.11",
]

[project.scripts]
material-agent = "material_agent.shells.cli.main:main"

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pytest-mock",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/material_agent"]

[tool.ruff]
line-length = 100
target-version = "py314"
